refactor: Tackle some build warnings.